# Drum-Machine-v1

./: .gitignore  BUILD.md  CMakeLists.txt  DEPENDENCIES.md  GUMROAD_SUMMARY.md  MILESTONE_1_BUILD.md  MULTI_SAMPLE_INTEGRATION.md  PACKAGING.md  README.md  RELEASE_NOTES.md  build_release.bat  imgui.ini  output.txt  test_functional.ps1  test_startup.ps1
.github/: copilot-instructions.md
.github/workflows/: build-on-push.yml  build-releases.yml
assets/: README.md
assets/samples/: example_pattern.json
include/: DrumMachine.h
installer/: DrumMachine.nsi  build_windows_installer.bat  create_linux_appimage.sh  create_macos_bundle.sh
src/: main.cpp  main_cli.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  MidiManager.cpp  MidiManager.h  SamplePlayer.cpp  SamplePlayer.h
src/core/: ParameterBus.cpp  ParameterBus.h
src/data/: DataManager.cpp  DataManager.h  MidiFileManager.cpp  MidiFileManager.h
src/sequencer/: Pattern.cpp  Pattern.h  Sequencer.cpp  Sequencer.h  Transport.cpp  Transport.h
src/ui/: AssetManager.cpp  AssetManager.h  MidiController.cpp  MidiController.h  PatternManager.cpp  PatternManager.h  SampleBrowser.cpp  SampleBrowser.h  StepEditor.cpp  StepEditor.h  SwingVisualizer.cpp  SwingVisualizer.h  UI.cpp  UI.h  Window.cpp  Window.h  Window_simple.cpp
tests/: CMakeLists.txt
tools/: generate_drum_kit.py  generate_test_sample.py
