cmake_minimum_required(VERSION 3.20)
project(DrumMachine_Tests)

# Link Catch2 (to be integrated)
# For now, tests directory is a placeholder

# TODO: Add Catch2 integration
# TODO: Add unit tests for each component:
#   - AudioEngine timing tests
#   - Sequencer step scheduling
#   - Transport tempo calculations
#   - Pattern data model
#   - Swing timing accuracy
#   - JSON serialization

# Example test executable (placeholder)
# add_executable(DrumMachine_tests
#     test_audio_engine.cpp
#     test_sequencer.cpp
#     test_transport.cpp
# )

# target_link_libraries(DrumMachine_tests PRIVATE Catch2::Catch2WithMain)
# add_test(NAME DrumMachine_Tests COMMAND DrumMachine_tests)
